WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
256034
Some FontSizeAdjust members are uninitialized
https://bugs.webkit.org/show_bug.cgi?id=256034
Summary
Some FontSizeAdjust members are uninitialized
Vitaly Dyackhov
Reported
2023-04-27 02:30:05 PDT
While this is not a problem for element styles, since they always assign initial values during the resolving process, it is for the document style. The document style gets some properties initialized in `RenderStyle resolveForDocument(const Document& document)` but not `fontSizeAdjust`, thus potentially leaving them to random values. It means that two otherwise identical document styles will be considered different and cause style invalidation of the entire DOM tree when it's not really necessary.
Attachments
Add attachment
proposed patch, testcase, etc.
Vitaly Dyackhov
Comment 1
2023-04-27 02:43:30 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/13230
Radar WebKit Bug Importer
Comment 2
2023-05-04 02:31:19 PDT
<
rdar://problem/108883885
>
EWS
Comment 3
2023-05-18 02:18:13 PDT
Committed
264195@main
(493fe8cbc12c): <
https://commits.webkit.org/264195@main
> Reviewed commits have been landed. Closing PR #13230 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug