`FontSizeAdjust`'s `metric` member is uninitialized https://bugs.webkit.org/show_bug.cgi?id=256034

Reviewed by Myles C. Maxfield.

Because of it two otherwise identical `RenderStyle`s
will be considered different and can cause full relayout
in some circumstances.

* Source/WebCore/platform/graphics/FontSizeAdjust.h:

Canonical link: https://commits.webkit.org/264195@main